--- a/src/components/Menu/index.css
+++ b/src/components/Menu/index.css
@@ -1,10 +1,14 @@
 #menu-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   width: 100%;
   height: 100%;
-  border: 1px solid black;
 }
 
 .item-card {
+  width: 250px;
   border: 1px solid black;
   border-radius: 5px;
   margin: 5px;
